--- a/src/components/CardContainer/CardContainer.css
+++ b/src/components/CardContainer/CardContainer.css
@@ -1,10 +1,9 @@
 .CardContainer {
     width: 27.375rem;
     height: 43.3125rem;  
-
     display: flex;
     flex-direction: column;
-    
+    overflow: hidden;
 }
 
 .title-container {
