--- a/src/components/CardFooter/CardFooter.css
+++ b/src/components/CardFooter/CardFooter.css
@@ -1,20 +1,18 @@
-.logo-footer {
-    display: flex;
-    align-items: flex-end;
-    
+.footer{
+    font-family: Prompt;
+    font-style: Regular;
+    font-size: 15px;
+    line-height: 30px;
 }
 
 .logo-footer > img{
-    width: 2.125rem;
+    width: 24px;
+    position: relative;
+    top: 110px;
     margin-left: 200px;
+    
 }
 
 .text-footer{
-    font-size: 20px;
-    position: absolute;
-    top: 730px;
-    margin-left: 15.625rem;
-    right: -20; 
-    color: aliceblue;
-    
+    margin-left: 230px;
 }
