--- a/src/components/CardMain/CardMain.css
+++ b/src/components/CardMain/CardMain.css
@@ -1,14 +1,13 @@
 .main{
-    padding-top: .6113rem;   
+    padding-top: 2.1625rem;   
 }
 
-.profile{
-    position: absolute;  
+.profile{ 
+    position: absolute; 
     border: .625rem solid #8257E5;
     border-radius: 50%;
     width: 20.10rem;
-    height: 20.125rem;  
-    margin-left: 2.5rem; 
+    height: 20.125rem;   
     
 }
 
@@ -25,6 +24,7 @@
     font-family: Prompt;
     font-style: Regular;
     font-size: 16px;
+    line-height: 100%;
     color: #FFFFFF;
     background-image: linear-gradient(#000000 3.5%, rgba(70, 69, 69, 0.72) 53.65%, rgba(62, 56, 56, 0.42) 100%);
     border-radius: 25%;
